<resources>
    <string name="app_name">Ready to Study</string>
    <string name="error_text">Ошибка</string>
    <string name="retry_text">повторить загрузку</string>
    <string name="loading_error_text">Ошибка загрузки</string>
    <string name="refreshing_error_text">Ошибка обновления</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="sign_up">Sign up</string>
    <string name="login">Login</string>
    <string name="action_next">Next</string>
    <string name="name">name</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="action_sign_in_short">LOGIN</string>
    <string name="pick_group">Choose group</string>
    <string name="preference_file_key">preference_file_key</string>
    <string name="disciplines">Дисциплины</string>
    
    <!--errors-->
    <string name="error_110">Неправильный email или пароль</string>
    <string name="error_general">К сожалению, произошла ошибка</string>
    <string name="error_401">unauthorized</string>
    <string name="available_disciplines">Доступные дисциплины</string>
    <string name="tests_title">Тесты</string>
    <string name="start">Начать</string>
    <string name="proceed">Продолжить</string>
    <string name="finish">Закончить</string>
    <string name="try_again">Попробовать снова</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="default_notification_channel_name" translatable="true">News</string>
    <string name="one_per_day">1 раз в день</string>
    <string name="two_per_day">2 раза в день</string>
    <string name="three_per_day">3 раза в день</string>
    <string name="four_per_day">4 раза в день</string>
    <string name="motivation_text">Настало время выбрать - как часто наше приложение будет мотивировать(доставать) тебя, чтобы ты занимался!</string>
    <string name="content">Пришло время показать, кто тут мозг</string>
</resources>
