<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".presentation.auth.AuthActivity"
    tools:showIn="@layout/auth_activity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/margin_medium"
        android:paddingLeft="@dimen/margin_medium"
        android:paddingRight="@dimen/margin_medium"
        android:paddingTop="@dimen/margin_medium">

        <ImageView
            android:id="@+id/iv_login_user"
            android:layout_width="130dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_email"
            style="@style/authInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_login_user"
            app:hintTextAppearance="@style/TextHintLabel">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_email"
                style="@style/authEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:imeActionLabel="@string/action_next"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:maxLines="1"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_password"
            style="@style/authInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/input_layout_email"
            android:layout_marginTop="6dp"
            app:hintTextAppearance="@style/TextHintLabel">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_password"
                style="@style/authEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:imeActionLabel="@string/action_sign_in_short"
                android:inputType="textPassword"
                android:maxLines="1"/>

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:id="@+id/btn_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/input_layout_password"
            android:layout_marginTop="6dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/btn_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/left_btn_blue_selector"
                android:text="@string/login"
                android:textSize="17sp"
                android:textAllCaps="false"
                android:textColor="@color/white"/>

            <Button
                android:id="@+id/btn_register"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/right_btn_selector"
                android:text="@string/sign_up"
                android:textSize="17sp"
                android:textAllCaps="false"
                android:textColor="@color/white"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_container"
            android:layout_marginTop="@dimen/margin_medium"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_forgot_password"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingBottom="12dp"
                android:paddingEnd="12dp"
                android:paddingStart="5dp"
                android:paddingTop="12dp"
                android:text="@string/forgot_password"
                android:textColor="@color/loginTextColorForgot"
                android:textSize="17sp"
                android:textAllCaps="false"/>

        </LinearLayout>


        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="invisible"/>

    </RelativeLayout>

</ScrollView>