<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.auth.AuthActivity">

    <RelativeLayout
        android:id="@+id/input_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/margin_medium"
        android:paddingLeft="@dimen/margin_medium"
        android:paddingRight="@dimen/margin_medium"
        android:paddingTop="@dimen/margin_medium">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="130dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_email"
            style="@style/authInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_logo"
            app:hintTextAppearance="@style/TextHintLabel">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_email"
                style="@style/regEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:imeActionLabel="@string/action_next"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:maxLines="1"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_name"
            style="@style/authInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/input_layout_email"
            android:layout_marginTop="6dp"
            app:hintTextAppearance="@style/TextHintLabel">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_name"
                style="@style/regEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:imeActionLabel="@string/action_next"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_password"
            style="@style/authInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/input_layout_name"
            android:layout_marginTop="6dp"
            app:hintTextAppearance="@style/TextHintLabel">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_password"
                style="@style/authEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:imeActionLabel="@string/action_sign_in_short"
                android:inputType="textPassword"
                android:maxLines="1"/>

        </android.support.design.widget.TextInputLayout>

        <RelativeLayout
            android:id="@+id/group_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/input_layout_password"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/group_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:gravity="center_vertical"

                android:padding="10dp"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:enabled="false"/>

            <ImageView
                android:id="@+id/btn_groups"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:padding="10dp"
                android:src="@drawable/drop"/>

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/btn_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/group_spinner"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_register"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_medium"
                android:layout_weight="1"
                android:background="@drawable/left_btn_blue_selector"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:enabled="false"/>

            <Button
                android:id="@+id/btn_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/right_btn_selector"
                android:ellipsize="end"
                android:maxLines="1"
                android:padding="4dp"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="17sp"/>

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/input_layout_email"
            android:layout_centerHorizontal="true"
            android:visibility="invisible"/>

    </RelativeLayout>

</ScrollView>